--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "pg": "^8.11.3",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1",
+        "serialize-error": "^11.0.3",
         "stripe": "^14.11.0",
         "typeorm": "^0.3.19",
         "typeorm-extension": "^3.2.0"
